--- a/WebAPI2/WebAPI.csproj
+++ b/WebAPI2/WebAPI.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
