JWT için options yazıldı.

--- a/WebAPI2/appsettings.json
+++ b/WebAPI2/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "osman@osman.com", //Kitle
+    "Issuer": "osman@osman.com", //
+    "AccessTokenExpiration": 10, // Tokenımızın geçerlilik süresi 10 dakika
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
